# GLDtk

./: .gitignore  CLAUDE.md  README.hy.md  README.md  __init__.py  example.py  level.ldtk  plan.md  pyproject.toml  server.py  start.sh
aesthetic/: __init__.py  autotile.py  entities.py  pipeline.py  themes.py
api/: models.py
layout/: __init__.py  ir.py  ldtk_adapter.py  sugiyama.py
ldtk-integration/: gldtk-panel.css  gldtk-panel.js  reload-bridge.js
llm/: __init__.py  patcher.py  prompt.py  validator.py
symbolic/: __init__.py  extractor.py  physics.py  schema.py
ui/: index.html
