[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gldtk"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.3",
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["symbolic*", "layout*", "llm*", "aesthetic*"]
