[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gldtk"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.3",
    "anthropic>=0.40",
]

[project.optional-dependencies]
server = [
    "fastapi[standard]>=0.111",
    "uvicorn[standard]>=0.29",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["symbolic*", "layout*", "llm*", "aesthetic*", "api*"]
